<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_rectangle"
    android:padding="@dimen/margin_5dp"

    >
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/notifi_title"
    android:gravity="center"
    android:layout_marginBottom="@dimen/margin_5dp"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:textColor="@color/text_color"
    />
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/notifi_content"
    android:gravity="center"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/white"
            android:text="@string/dont_allow"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_blue_dark"
            />
        <Button
            android:id="@+id/btn_positive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/subscribe_ok"
            android:background="@color/white"
            android:textAllCaps="true"
            android:textColor="@android:color/holo_blue_dark"
            />
        </LinearLayout>
</LinearLayout>