<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_vacation_mode"
    android:layout_width="@dimen/device_width"
    android:layout_height="@dimen/device_heigh"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:background="@android:color/white"
    >
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:src="@drawable/vector_drawable_ic_109"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/vacation_mode_title"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@android:color/darker_gray"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacation_mode"
            android:layout_centerVertical="true"
            />
        <ToggleButton
            android:id="@+id/togBtn_vacation_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:button="@drawable/toggle_btn_selector"
            android:checked="false"
            android:text=""
            android:textOff=""
            android:textOn=""
            android:layout_alignParentRight="true"
            />
        </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@android:color/darker_gray"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vacation_mode_one"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vacation_mode_second"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vacation_mode_explain"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        />
</LinearLayout>
