<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up_one"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            >

            <ImageView
                android:id="@+id/iv_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/vector_drawable_ic_77"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/log_in_third_title"
                android:textSize="@dimen/sign_up_title_text"
                android:textColor="@color/red"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_password_explain"
            android:layout_marginTop="20dp"
            android:gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/et_email_adress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/new_password_hint"
                android:background="@null"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                />
            <ImageView
                android:id="@+id/iv_enter_email"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/vector_drawable_ic_76"
                android:visibility="invisible"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_marginTop="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_strength"
                />
            <TextView
                android:id="@+id/tv_password_strong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="start typing"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_explain"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            />
        <Button
            android:id="@+id/btn_log_in"
            android:layout_width="match_parent"
            style="@style/graybutton"
            android:layout_marginTop="50dp"
            android:text="@string/log_in"
            />
    </LinearLayout>
</LinearLayout>
