<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_vacation_mode"
    android:layout_width="@dimen/device_width"
    android:layout_height="@dimen/device_heigh"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:background="@color/white"

    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/scene_action_title"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/set_up_key_explain"
        android:layout_marginTop="16dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginTop="20dp"
        />
    <com.yanzhenjie.recyclerview.swipe.SwipeMenuRecyclerView
        android:id="@+id/rv_available_commands"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_action"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        />
    <ImageView
        android:id="@+id/iv_add_action"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:src="@drawable/vector_drawable_ic_90"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        />
</LinearLayout>
